--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,9 @@ jobs:
         make install
     - name: Lint with Pylint
       run: |
-        make link
+        make lint
     - name: Test with Pytest
       run: |
         make test
     - name: Format code with Python black
         make format
-    
