--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,5 @@ jobs:
         run: |
           make test
       - name: Format code with Python black
+        run: |      
           make format
